Thu Sep  6 11:20:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractTriangle.java (copy): Also copy
	readable/writable members.

Wed Sep  5 15:23:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java
	  src/org/jcae/mesh/amibe/ds/AbstractTriangle.java: Move
	readable/writable members from Triangle to AbstractTriangle.
	* src/org/jcae/mesh/oemm/MeshReader.java: New class to improve
	user control on reading OEMM nodes.
	* src/org/jcae/mesh/oemm/RawStorage.java (IndexExternalVerticesProcedure):
	More aggressive memory management by catching OutOfMemoryError
	exception.

Tue Sep  4 09:34:15 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Metric3D.java: Replace clone()
	method by copy().
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Use a static
	Metric3D instance to compute inverse matrix.
	* src/org/jcae/mesh/amibe/util/QSortedTree.java (update): Reuse
	the removed node.
	* src/org/jcae/mesh/amibe/ds/VolMesh.java: Class removed, Mesh
	instances can now contains a list of nodes.

Mon Sep  3 11:45:18 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): XPath
	processing of <group> elements was very slow, move XPath expressions
	outside of inner loops.

Mon Sep  3 00:11:09 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Drop prodVect3D()
	method with two arguments.  Drop apply() method with one argument.
	* src/org/jcae/mesh/amibe/ds/Vertex.java: Add an argument to outer3D()
	to contain outer product.
	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Modify transp() and
	inv() to operate on current instance.
	* src/org/jcae/mesh/amibe/metrics/Metric3D.java: Add clone() method.

Fri Aug 31 17:33:34 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
